<resources>
    <string name="app_name">OnlineShoppingIsa</string>
    <string name="data_of_birth">Data of Birth</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="read_more">...more</string>
    <string name="read_less">...less</string>
    <string name="mobile_firebase">Mobile</string>
    <string name="fashion_firebase">Fashion</string>
    <string name="product_type_firebase">ProductType</string>
    <string name="labtop_firebase">Labtop</string>
    <string name="memory_of_ram">Memory Of Ram:</string>
    <string name="home_page">home_page</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="set_location">Set Location</string>
    <string name="total_price">Total Price:</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="job_title">Job Title</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="shopping_app">Shopping App</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="create_account">Create Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="username">Username</string>
    <string name="e_mail">E-mail</string>
    <string name="job">Job</string>
    <string name="gender">Gender</string>
    <string name="data_of_birth1">Data of birth</string>
    <string name="submit">Submit</string>
    <string name="todo">TODO</string>
    <string name="hello_rafeek">Hello Rafeek</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="my_cart">My Cart</string>
    <string name="sign_out">Sign Out</string>
    <string name="my_order">My Order</string>
    <string name="connect">Connect</string>
    <string name="connect_us">Connect Us</string>
    <string name="product_name">Product Name</string>
    <string name="qunatity_value">Qunatity value</string>
    <string name="product_price">product price</string>
    <string name="flow_chart">flow chart</string>
</resources>