<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_menu_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />

        <item
            android:id="@+id/drawer_menu_profile"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/profile" />


        <item
            android:id="@+id/my_order"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/my_order" />

        <item
            android:id="@+id/my_cart"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/my_cart" />

        <item
            android:id="@+id/sign_out"
            android:icon="@drawable/icons8export26"
            android:title="@string/sign_out" />
    </group>

    <item android:title="@string/connect">
        <menu>
            <item
                android:id="@+id/drawer_menu_connect_us"
                android:title="@string/connect_us" />
        </menu>

    </item>
</menu>