<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.UserProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/activity_user_profileEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:autofillHints="Edit profile"
            android:background="@null"
            android:inputType="text"
            android:text="@string/edit_profile"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/activity_user_profileEdit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor,MissingConstraints" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/activity_user_profile_imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="20sp"
            android:src="@drawable/profile_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_user_profileEdit"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/activity_user_profile_add_photo"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:contentDescription="@string/todo"
            android:src="@drawable/add_photo2"
            app:fabCustomSize="35dp"
            app:layout_constraintBottom_toBottomOf="@id/activity_user_profile_imageView"
            app:layout_constraintEnd_toEndOf="@id/activity_user_profile_imageView"
            tools:ignore="UnusedAttribute" />


        <EditText
            android:id="@+id/activity_user_profile_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:background="@null"
            android:padding="5dp"
            android:text="@string/username"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_user_profile_imageView" />

        <View
            android:id="@+id/activity_user_profile_view1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/activity_user_profile_userName" />

        <EditText
            android:id="@+id/activity_user_profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:background="@null"
            android:padding="5dp"
            android:text="@string/e_mail"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_user_profile_view1" />

        <View
            android:id="@+id/activity_user_profile_view2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/activity_user_profile_email" />

        <EditText
            android:id="@+id/activity_user_profile_job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:background="@null"
            android:padding="5dp"
            android:text="@string/job"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_user_profile_view2" />

        <View
            android:id="@+id/activity_user_profile_view3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/activity_user_profile_job" />

        <EditText
            android:id="@+id/activity_user_profile_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:background="@null"
            android:padding="5dp"
            android:text="@string/gender"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_user_profile_view3" />

        <View
            android:id="@+id/activity_user_profile_view4"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/activity_user_profile_gender" />

        <EditText
            android:id="@+id/activity_user_profile_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:autofillHints=""
            android:background="@null"
            android:inputType="text"
            android:padding="5dp"
            android:text="@string/data_of_birth1"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_user_profile_view4"
            tools:ignore="Deprecated,LabelFor,TextFields" />

        <View
            android:id="@+id/activity_user_profile_view5"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/activity_user_profile_date" />

        <Button
            android:id="@+id/fragment_user_profile_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:background="@android:color/black"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_user_profile_view5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>