<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign_up.MainActivity2"
    android:background="@android:color/darker_gray">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/sign_up_appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/sign_up_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="fitXY"
                android:src="@drawable/online_shopping_img"
                app:layout_collapseMode="parallax"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="18dp"
                android:layout_marginLeft="16dp"
                android:background="@null"
                android:text="@string/shopping_app"
                android:textColor="@color/colorLayerDark"
                android:textSize="25sp" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/signup_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:background="@drawable/sign_up_background"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:background="@drawable/sign_up_background"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:hint="@string/sign_up"
                android:textColor="@color/colorTextPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/main_activity2_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp">
                <EditText
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="15sp"
                    tools:ignore="Autofill"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:hint="@string/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_baseline_email_24" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/main_activity2_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp">
                <EditText
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="15sp"
                    tools:ignore="Autofill"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_baseline_account_circle_24"
                    android:hint="@string/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_baseline_email_24" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/main_activity2_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:imeOptions="actionNext"
                    android:inputType="numberPassword"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="15sp"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:hint="@string/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:drawableLeft="@drawable/ic_baseline_lock_24" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/main_activity2_confirm_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                app:passwordToggleEnabled="true">
                <EditText
                    android:imeOptions="actionNext"
                    android:inputType="numberPassword"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="15sp"
                    tools:ignore="Autofill"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:hint="@string/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_baseline_lock_24" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/main_activity2_job"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp">
                <EditText
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="15sp"
                    tools:ignore="Autofill"
                    android:drawablePadding="5dp"
                    android:hint="@string/job_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@color/colorTextHint"/>

            <RadioGroup
                android:id="@+id/main_activity2_radio_grop"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="clip_horizontal"
                >
                <RadioButton
                    android:checked="true"
                    android:layout_weight="1"
                    android:text="@string/male"
                    android:id="@+id/main_activity2_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <RadioButton
                    android:layout_weight="1"
                    android:text="@string/female"
                    android:id="@+id/main_activity2_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@color/colorTextHint"/>

            <TextView
                android:drawableEnd="@drawable/ic_baseline_calendar_today_24"
                android:id="@+id/main_activity2_data_birth"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/data_of_birth"
                android:textColor="@color/colorTextPrimary"
                android:textSize="20sp"
                android:drawableRight="@drawable/ic_baseline_calendar_today_24"
                android:drawablePadding="10dp"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/ic_baseline_calendar_today_24"
                tools:ignore="UseCompatTextViewDrawableXml" />

            <Button
                android:id="@+id/main_activity2_sign_up_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/login_button_background"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/colorLayerDark"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>